--- a/B3_GlobalEnvironment/Starter/index.html
+++ b/B3_GlobalEnvironment/Starter/index.html
@@ -3,7 +3,8 @@
         
     </head>
     <body>
+        <h1>Teste JS</h1>
 
         <script src="app.js"></script>
-    </body>
+        
 </html>
