--- a/B3+Global+Environment/B3+Global+Environment/B3_GlobalEnvironment/Starter/index.html
+++ b/B3+Global+Environment/B3+Global+Environment/B3_GlobalEnvironment/Starter/index.html
@@ -3,8 +3,7 @@
         
     </head>
     <body>
-        <h1>Teste JS</h1>
 
         <script src="app.js"></script>
-        
+    </body>
 </html>
