--- a/imc/index.html
+++ b/imc/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>imc</title>
 </head>
 
 <body>
-    <h1>Teste JS</h1>
+    <h1>TesteJS</h1>
 
     <script src="imc.js"></script>
 </body>
