--- a/trello/trello/trello.html
+++ b/trello/trello/trello.html
@@ -25,22 +25,22 @@
 
     <span>ou</span>
 
-    <button>
+    <button type="button">
       <img src="img/google.svg" width="20" alt="Google">
       Continuar com o Google
     </button>
 
-    <button>
+    <button type="button">
       <img src="img/microsoft.svg" width="20" alt="Microsoft">
       Continuar com o microsoft
     </button>
 
-    <button>
+    <button type="button">
       <img src="img/apple.svg" width="20" alt="Apple">
       Continuar com a Apple
     </button>
 
-    <button>
+    <button type="button">
       <img src="img/slack.svg" width="20" alt="Slack">
       Continuar com o Slack
     </button>
